--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   dio: ^5.7.0
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
+  flutter_local_notifications: ^18.0.1
+  firebase_core: ^3.10.1
+  firebase_messaging: ^15.2.1
 
 dev_dependencies:
   flutter_test:
