--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,23 +1,3 @@
-// O bloco 'buildscript' deve vir antes de qualquer outro bloco
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.0'
-        classpath 'com.google.gms:google-services:4.3.15'
-        classpath platform('com.google.firebase:firebase-bom:33.8.0')
-    }
-}
-
-plugins {
-    id 'com.android.application'  // Plugin do Android Application
-    id 'com.google.gms.google-services' version '4.3.15'  // Plugin do Google Services
-    id 'kotlin-android'  // Plugin Kotlin
-    id 'dev.flutter.flutter-gradle-plugin'  // Plugin Flutter
-}
-
 allprojects {
     repositories {
         google()
@@ -25,35 +5,14 @@ allprojects {
     }
 }
 
-android {
-    namespace = "com.example.senior"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
-
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
-    }
-
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
-    }
-
-    defaultConfig {
-        applicationId = "com.example.senior"
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
-    }
-
-    buildTypes {
-        release {
-            signingConfig = signingConfigs.debug
-        }
-    }
+rootProject.buildDir = "../build"
+subprojects {
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
+subprojects {
+    project.evaluationDependsOn(":app")
 }
 
-flutter {
-    source = "../.."
+tasks.register("clean", Delete) {
+    delete rootProject.buildDir
 }
