--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   firebase_core: ^3.10.1
   firebase_messaging: ^15.2.1
+  # flutter_native_timezone: ^2.0.0
+  # timezone: ^0.10.0
 
 dev_dependencies:
   flutter_test:
