--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,8 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   firebase_core: ^3.10.1
   firebase_messaging: ^15.2.1
-  # flutter_native_timezone: ^2.0.0
-  # timezone: ^0.10.0
+  flutter_datetime_picker_plus: ^2.2.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
