--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,17 +15,22 @@ dependencies:
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
   flutter_local_notifications: ^18.0.1
-  firebase_core: ^3.10.1
-  firebase_messaging: ^15.2.1
   flutter_datetime_picker_plus: ^2.2.0
   intl: ^0.20.2
   go_router: ^14.7.2
   auto_route: ^9.3.0+1
+  android_alarm_manager_plus: ^4.0.6
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app.png"
 
 flutter:
   uses-material-design: true
