--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_messaging: ^15.2.1
   flutter_datetime_picker_plus: ^2.2.0
   intl: ^0.20.2
+  go_router: ^14.7.2
 
 dev_dependencies:
   flutter_test:
