--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   shared_preferences: ^2.5.2
   provider: ^6.1.2
+  sqflite: ^2.3.0
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
