--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   provider: ^6.1.2
   sqflite: ^2.3.0
   path_provider: ^2.1.2
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
