--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   sqflite: ^2.3.0
   path_provider: ^2.1.2
   fl_chart: ^0.70.2
+  table_calendar: ^3.2.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
